--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,7 @@ table{
     margin-top: 100px;
     text-align: center;
 }
+
+body{
+    background-image: linear-gradient(45deg , lightblue,white );
+}
